# spotify-syncstream-architect

./: .dockerignore  .env  .gitignore  CONTEXT.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
app/: main.py
app/api/v1/: engine.py  strategies.py
app/core/: config.py  logging.py  redis.py  seeding.py
app/models/: spotify.py  strategy.py
app/services/: engine.py  refresh_token_task.py  strategy_manager.py
app/services/spotify/: base.py  mock.py  prod.py
app/strategies/: base.py  strategy_factory.py
app/strategies/implementations/: energy_floor.py  focus_guard.py  vibe_shift.py
docker/: Dockerfile  docker-compose.yml
tests/api/: conftest.py  test_engine_api.py  test_strategies_api.py
tests/integration/: conftest.py  test_strategy_manager.py
tests/unit/: test_strategies.py
